@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8" standalone="yes"?>
-<addon id="service.subtitles.subtitles.gr" name="Subtitles.gr" version="3.2.0" provider-name="Twilight0">
+<addon id="service.subtitles.subtitles.gr" name="Subtitles.gr" version="3.2.1" provider-name="Twilight0">
     <requires>
         <import addon="xbmc.python" version="2.24.0"/>
         <import addon="script.module.tulip" version="2.7.1" />
@@ -17,7 +17,11 @@
         <license>GPL-3.0-only</license>
         <website>http://www.subtitles.gr/</website>
         <platform>all</platform>
-        <news>[B]3.2.X[/B]
+        <news>[B]3.2.1[/B]
+- Added capability for nested zips on vipsubs.gr
+- Skip certain results not containing subtitles on vipsubs.gr
+
+[B]3.2.0[/B]
 - Bumped dependencies
 - Improved cache clear function
 - Added vipsubs.gr
